Fix active boxes being misaligned

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,6 +11,10 @@ row-no-top {
   border-top: 0;
 }
 
+.hidden-overflow {
+  overflow: hidden;
+}
+
 .scrollable-menu {
     height: auto;
     max-height: 200px;
